fix: dont change selection btn bg-color on mobile

--- a/client/src/css/rock-paper-scissors/rock-paper-scissors.scss
+++ b/client/src/css/rock-paper-scissors/rock-paper-scissors.scss
@@ -21,6 +21,11 @@
       &:hover {
         background-color: var(--green);
       }
+      @include for-phone-only {
+        &:hover {
+          background-color: var(--gray);
+        }
+      }
     }
     &:disabled,
     &[disabled] {
